opam-version: "2.0"
homepage: "https://github.com/pitag-ha/dune-release-test"
dev-repo: "https://github.com/pitag-ha/dune-release-test"
bug-reports: "https://github.com/pitag-ha/dune-release-test/issues"
doc: "https://pitag-ha.github.io/dune-release-test/"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.4.0"}
  "curly"
  "fmt"
  "bos"
  "cmdliner"
  "re"
  "opam-format" {< "2.1.0~beta"}
  "opam-state" {< "2.1.0~beta"}
  "opam-core" {< "2.1.0~beta"}
  "rresult"
  "logs"
  "odoc"
  "alcotest" {with-test}
  "mdx" {with-test & >= "1.6.0"}
  "yojson"
]

synopsis: "Test dune-release"
description: """
Test dune-release
"""
